Upload file basic

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -35,3 +35,5 @@ spring.jpa.properties.hibernate.hbm2ddl.auto=update
 # View resolver configured in WebConfig.java
 #spring.mvc.view.prefix=/WEB-INF/view/
 #spring.mvc.view.suffix=.jsp
+spring.servlet.multipart.max-file-size=50MB
+spring.servlet.multipart.max-request-size=50MB
