--- a/pom.xml
+++ b/pom.xml
@@ -39,12 +39,12 @@
 		</dependency>
 
 
-		<!-- Temporarily disabled for testing
+		<!-- Temporarily disabled for testing -->
 		<dependency>
   		  <groupId>org.springframework.boot</groupId>
    		  <artifactId>spring-boot-starter-security</artifactId>
 		</dependency>
-		-->
+		
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
